--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
             class="nav-link"
             [class.active]="activeTab === 'movies'"
             (click)="switchTab('movies')"
-            >Movies</a
+            >Moviess</a
           >
         </li>
         <li class="nav-item">
